--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,12 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <div>
-      <h1>
-          Dating App
-      </h1>
-  </div>
-  <div>
-      <app-value></app-value>
-  </div>
-</div>
+<app-nav></app-nav>
+<app-home></app-home>
 
