--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -22,13 +22,13 @@
            <div>
               <strong>LastActive:</strong>
               <p>
-                {{user.lastActive}}
+                {{user.lastActive | timeAgo}}
               </p>
             </div>
             <div>
                 <strong>Member Since:</strong>
                 <p>
-                  {{user.created}}
+                  {{user.created | date:'mediumDate'}}
                 </p>
               </div>
         </div>
